# deployment-basics

./: README.md
.github/workflows/: ci.yml
01-containerization/: README.md
01-containerization/apps/: compose.prod.yml  compose.yml
01-containerization/apps/backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yml  database.py  main.py  models.py  pyproject.toml  settings.py  test_todo.py  tests.py
01-containerization/apps/frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
01-containerization/apps/frontend/src/app/: layout.tsx  page.tsx
01-containerization/apps/frontend/src/components/add-todo/: actions.ts  dialog.tsx
01-containerization/apps/frontend/src/components/todo-card/: actions.ts  index.tsx
02-ci-cd-pipelines/: README.md
03-kubernetes-deployment/: README.md  guide.md  postgres.yml  setup.md
